# cellar

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  meson.build  pyproject.toml
.github/workflows/: flatpak.yml  flatter.yml
cellar/: __init__.py  _version.py  main.py  meson.build  window.py
cellar/backend/: _profile_matching.py  backup_exclude.txt  base_store.py  bottles.py  components.py  config.py  database.py  detect.py  disc_image.py  dosbox.py  dosbox_profiles.py  game_search.py  gogdb.py  igdb.py  install_queue.py  installer.py  launch_exclude.txt  lutris.py  manifest.py  meson.build  packager.py  prefix_fixup.py  project.py  publish_queue.py  repo.py  runners.py  sandbox.py  scummvm.py  scummvm_convert.py  scummvm_profiles.py  steam.py  umu.py  updater.py
cellar/backend/scanners/: __init__.py  base.py  battlenet.py  epic.py  meson.build
cellar/models/: app_entry.py  manifest.py  meson.build
cellar/utils/: __init__.py  _remote_path.py  async_work.py  checksum.py  desktop.py  gio_io.py  gog.py  http.py  image.py  images.py  meson.build  paths.py  progress.py  smb.py  ssh.py  terminal.py
cellar/views/: add_app.py  browse.py  detail.py  dosbox_settings.py  download_queue.py  edit_app.py  game_picker.py  igdb_picker.py  install_runner.py  installed.py  launch_params.py  launch_targets_group.py  launcher_games.py  meson.build  metadata_editor.py  package_builder.py  screenshot_grid.py  scummvm_settings.py  settings.py  steam_picker.py  steam_screenshot_picker.py  tag_entry.py  transfer_dialog.py  update_app.py  updates.py  user_data_group.py  widgets.py
cellar/views/builder/: __init__.py  catalogue_import.py  dependencies.py  media_panel.py  meson.build  metadata.py  pickers.py  progress.py  view.py
data/: dosbox-profiles.json  dosbox-staging.conf  io.github.cellar.desktop  io.github.cellar.gschema.xml  meson.build  scummvm-profiles.json
data/ui/: meson.build  window.ui
docs/: AUTH.md  FIX_IMPORT_USER_DATA.md  GTK_ADWAITA_NOTES.md  INTERNALS.md  PLAN_BIN_SCAN.md  PLAN_D7VK.md  PLAN_PCGW_INTEGRATION.md  PLAN_UMU_MIGRATION.md  REPO_FORMAT.md
flatpak/: generate-sources.sh  index.html  io.github.cellar.json  python-sources.json  requirements.txt
po/: meson.build
tests/: prefix-diff.sh  prefix-snapshot.sh  test_bottles.py  test_components.py  test_database.py  test_detect.py  test_dosbox.py  test_dosbox_profiles.py  test_gog.py  test_images.py  test_installer.py  test_packager.py  test_prefix_fixup.py  test_repo.py  test_runners.py  test_sandbox.py  test_steam.py
tests/fixtures/: catalogue.json
tests/fixtures/apps/example-app/: manifest.json
tests/fixtures/apps/paint-clone/: manifest.json
tools/: gen_scummvm_profiles.py
