[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "cellar"
version = "0.43.22"
description = "A GNOME storefront for Windows and Linux applications"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "PyYAML",
    "Pillow",
    "requests",
    "zstandard",
    "smbprotocol",
    "keyring",
]

[project.scripts]
cellar = "cellar.main:main"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
