[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellar"
version = "0.46.93"
description = "A GNOME storefront for Windows and Linux applications"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "PyYAML",
    "Pillow",
    "requests",
    "zstandard",
    "smbprotocol",
    "paramiko",
]

[project.scripts]
cellar = "cellar.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cellar"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "cellar/data"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
