[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellar"
dynamic = ["version"]
description = "A GNOME storefront for Windows and Linux applications"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "Pillow",
    "pycdlib",
    "rapidfuzz",
    "requests",
    "zstandard",
    "smbprotocol",
    "paramiko",
]

[project.scripts]
cellar = "cellar.main:main"

[tool.hatch.version]
path = "cellar/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["cellar"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "cellar/data"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# gi.require_version() must precede gi.repository imports — E402 is intentional
"cellar/main.py" = ["E402"]
"cellar/window.py" = ["E402"]
"cellar/views/**" = ["E402"]
