install_data('io.github.cellar.gschema.xml',
  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
)

install_data('io.github.cellar.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data('io.github.cellar.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

subdir('ui')
