install_data('io.github.cellar.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_subdir('icons/hicolor',
  install_dir: get_option('datadir') / 'icons',
)

install_data('dosbox-staging.conf',
  install_dir: get_option('datadir') / 'cellar',
)

install_data('dosbox-profiles.json',
  install_dir: get_option('datadir') / 'cellar',
)

install_data('scummvm-profiles.json',
  install_dir: get_option('datadir') / 'cellar',
)

subdir('ui')
