python_sources = files(
  '__init__.py',
  'browse.py',
  'detail.py',
  'edit_app.py',
  'install_runner.py',
  'settings.py',
  'steam_picker.py',
  'steam_screenshot_picker.py',
  'update_app.py',
  'widgets.py',
)

python.install_sources(python_sources, subdir: 'cellar/views')

subdir('builder')
