python_sources = files(
  '__init__.py',
  'browse.py',
  'detail.py',
  'transfer_dialog.py',
  'dosbox_settings.py',
  'metadata_editor.py',
  'install_runner.py',
  'launch_params.py',
  'settings.py',
  'screenshot_grid.py',
  'steam_picker.py',
  'update_app.py',
  'widgets.py',
)

python.install_sources(python_sources, subdir: 'cellar/views')

subdir('builder')
