python_sources = files(
  '__init__.py',
  'browse.py',
  'detail.py',
  'transfer_dialog.py',
  'dosbox_settings.py',
  'metadata_editor.py',
  'install_runner.py',
  'launch_params.py',
  'launch_targets_group.py',
  'settings.py',
  'screenshot_grid.py',
  'game_picker.py',
  'update_app.py',
  'user_data_group.py',
  'widgets.py',
)

python.install_sources(python_sources, subdir: 'cellar/views')

subdir('builder')
